# Loz

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  build.sh  buildAndRunUts  installDeps.sh  memchecker.sh  sourceCode.loz  utsBuildAndRun
cmake/: Coverage.cmake  CppCheck.cmake  Format.cmake  Memcheck.cmake  Testing.cmake
generators/: TreeGenerator.cpp
src/: CMakeLists.txt  Runner.cpp  Runner.hpp  bootstrap.cpp  main.cpp
src/abstractSyntaxTree/: CMakeLists.txt  Expr.hpp
src/astPrinter/: AstPrinter.cpp  CMakeLists.txt  main.cpp
src/errorHandling/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.hpp  IErrorHandler.hpp
src/interpreter/: CMakeLists.txt  ICallable.hpp  Interpreter.cpp  Interpreter.hpp  RuntimeClass.cpp  RuntimeClass.hpp  RuntimeClassInstance.cpp  RuntimeClassInstance.hpp  RuntimeFunction.cpp  RuntimeFunction.hpp
src/interpreter/environment/: CMakeLists.txt  Environment.cpp  Environment.hpp
src/parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
src/parser/astPrinter/: AstPrinter.cpp  AstPrinter.hpp  CMakeLists.txt  CMakeLists1.txt  main.cpp
src/resolver/: CMakeLists.txt  Resolver.cpp  Resolver.hpp
src/scanner/: CMakeLists.txt  IScanner.hpp  Scanner.cpp  Scanner.hpp  Token.cpp  Token.hpp
test/: CMakeLists.txt  dummyTest.cpp
test/errorHandling/: CMakeLists.txt  ErrorHandlerTest.cpp
test/interpreter/: CMakeLists.txt  InterpreterTest.cpp
test/mocks/: EnvironmentMock.hpp  ErrorHandlerMock.hpp
test/parser/: CMakeLists.txt  ParserTest.cpp
test/scanner/: CMakeLists.txt  ScannerTest.cpp  TokenTest.cpp
